--- a/docs/dev-deploy/deployment.mdx
+++ b/docs/dev-deploy/deployment.mdx
@@ -130,9 +130,45 @@ services:
       - "8000:8000"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - KAFKA_BROKERS=kafka:9092
     volumes:
       - ./config.agent.yaml:/app/config.agent.yaml
       - ./tools.py:/app/src/tools/
+    depends_on:
+      - postgres
+      - redis
+      - kafka
+
+  postgres:
+    image: postgres:15
+    environment:
+      - POSTGRES_DB=nomos
+      - POSTGRES_USER=nomos
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis_data:/data
+
+  kafka:
+    image: bitnami/kafka:latest
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+    depends_on:
+      - zookeeper
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+volumes:
+  postgres_data:
+  redis_data:
 ```
 
 ### Kubernetes
