feat: add Discord community section for real-time support and collaboration

--- a/docs/community/index.mdx
+++ b/docs/community/index.mdx
@@ -81,6 +81,12 @@ If you have any questions or need help with NOMOS:
   </Card>
 </CardGroup>
 
+### Join Our Discord Community
+
+Connect with other NOMOS developers, get real-time support, and share your projects:
+
+<iframe src="https://discord.com/widget?id=1393886830553731183&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
 ### Getting Help
 
 <Steps>
