feat: add Master Roshi agent showcase and enhance API tool integration tests

--- a/docs/community/showcase.mdx
+++ b/docs/community/showcase.mdx
@@ -36,6 +36,13 @@ Explore what the NOMOS community has built! From simple chatbots to complex mult
   >
     Interactive barista agent for coffee recommendations and orders
   </Card>
+  <Card
+    title="Master Roshi Training Assistant"
+    icon="martial-arts"
+    href="https://github.com/dowhiledev/nomos/tree/main/cookbook/examples/master-roshi"
+  >
+    Dragon Ball-themed training assistant with API tool integration
+  </Card>
 </CardGroup>
 
 ## Community Contributions
