--- a/docs/dev-deploy/configuration.mdx
+++ b/docs/dev-deploy/configuration.mdx
@@ -100,6 +100,29 @@ steps:
 start_step_id: start
 max_errors: 3  # Maximum consecutive errors before stopping
 max_iter: 10  # Maximum iterations per interaction
+
+# Server configuration (optional)
+server:
+  port: 8000
+  host: "0.0.0.0"
+  workers: 1
+  security:
+    # Authentication
+    enable_auth: false
+    auth_type: jwt  # or "api_key"
+    jwt_secret_key: "$JWT_SECRET_KEY"
+
+    # Rate limiting
+    enable_rate_limiting: false
+    rate_limit: "100/minute"
+
+    # CSRF protection
+    enable_csrf_protection: false
+    csrf_secret_key: "$CSRF_SECRET_KEY"
+
+    # CORS configuration
+    allowed_origins:
+      - "*"  # Use specific domains in production
 ```
 
 ### Advanced YAML Configuration
@@ -110,6 +133,106 @@ max_iter: 10  # Maximum iterations per interaction
   href="../cookbook/examples/barista/config.agent.yaml"
 >
   See a comprehensive configuration example
+</Card>
+
+## Server Configuration
+
+Configure the FastAPI server settings and security features:
+
+```yaml
+server:
+  port: 8000
+  host: "0.0.0.0"
+  workers: 1
+
+  security:
+    # Authentication configuration
+    enable_auth: true
+    auth_type: jwt  # Options: "jwt", "api_key"
+    jwt_secret_key: "$JWT_SECRET_KEY"
+    # api_key_url: "https://your-api.com/validate-key"  # For API key auth
+
+    # Rate limiting configuration
+    enable_rate_limiting: true
+    rate_limit: "100/minute"  # Format: "number/time_unit"
+
+    # CSRF protection configuration
+    enable_csrf_protection: true
+    csrf_secret_key: "$CSRF_SECRET_KEY"
+
+    # CORS configuration
+    allowed_origins:
+      - "https://your-frontend.com"
+      - "http://localhost:3000"  # For development
+
+  # Session store configuration
+  session:
+    store_type: "memory"  # Options: "memory", "production"
+    default_ttl: 3600
+    cache_ttl: 3600
+    # For production session store:
+    # database_url: "$DATABASE_URL"
+    # redis_url: "$REDIS_URL"
+    # kafka_brokers: "$KAFKA_BROKERS"
+    # events_enabled: true
+```
+
+### Security Configuration Examples
+
+<CodeGroup>
+
+```yaml JWT Authentication
+server:
+  security:
+    enable_auth: true
+    auth_type: jwt
+    jwt_secret_key: "$JWT_SECRET_KEY"
+    enable_rate_limiting: true
+    rate_limit: "100/minute"
+```
+
+```yaml API Key Authentication
+server:
+  security:
+    enable_auth: true
+    auth_type: api_key
+    api_key_url: "https://your-api.com/validate-key"
+    enable_rate_limiting: true
+    rate_limit: "50/minute"
+```
+
+```yaml Development Setup
+server:
+  security:
+    enable_auth: false
+    enable_rate_limiting: false
+    enable_csrf_protection: false
+    allowed_origins:
+      - "*"
+```
+
+```yaml Production Setup
+server:
+  security:
+    enable_auth: true
+    auth_type: jwt
+    jwt_secret_key: "$JWT_SECRET_KEY"
+    enable_rate_limiting: true
+    rate_limit: "1000/hour"
+    enable_csrf_protection: true
+    csrf_secret_key: "$CSRF_SECRET_KEY"
+    allowed_origins:
+      - "https://your-production-frontend.com"
+```
+
+</CodeGroup>
+
+<Card
+  title="Security Guide"
+  icon="shield-check"
+  href="/security"
+>
+  Complete security configuration and best practices
 </Card>
 
 ## LLM Configuration
@@ -283,12 +406,139 @@ Common environment variables for NOMOS agents:
 | `GOOGLE_API_KEY` | Google API key | If using Gemini |
 | `HUGGINGFACE_API_TOKEN` | HuggingFace token | If using HuggingFace |
 | `ANTHROPIC_API_KEY` | Anthropic API key | If using Anthropic |
+| `JWT_SECRET_KEY` | JWT secret key | If using JWT authentication |
+| `CSRF_SECRET_KEY` | CSRF secret key | If using CSRF protection |
+| `DATABASE_URL` | Database connection URL | If using production session store |
+| `REDIS_URL` | Redis connection URL | If using Redis for sessions |
+| `KAFKA_BROKERS` | Kafka broker URLs | If using Kafka for events |
+
+### Using Environment Variables in Configuration
+
+You can reference environment variables in your YAML configuration using the `$` prefix:
+
+```yaml
+name: my-secure-agent
+llm:
+  provider: openai
+  api_key: "$OPENAI_API_KEY"  # References environment variable
+
+server:
+  security:
+    jwt_secret_key: "$JWT_SECRET_KEY"
+    csrf_secret_key: "$CSRF_SECRET_KEY"
+  session:
+    database_url: "$DATABASE_URL"
+    redis_url: "$REDIS_URL"
+```
+
+| Variable | Description | Required |
+|----------|-------------|----------|
+| `OPENAI_API_KEY` | OpenAI API key | If using OpenAI |
+| `MISTRAL_API_KEY` | Mistral API key | If using Mistral |
+| `GOOGLE_API_KEY` | Google API key | If using Gemini |
+| `HUGGINGFACE_API_TOKEN` | HuggingFace token | If using HuggingFace |
+| `ANTHROPIC_API_KEY` | Anthropic API key | If using Anthropic |
+
+## Complete Configuration Example
+
+Here's a comprehensive configuration example that includes all security features:
+
+```yaml
+name: "secure-production-agent"
+persona: "You are a secure AI assistant with comprehensive security features enabled."
+
+# Agent steps
+steps:
+  - step_id: "start"
+    description: "Initial greeting and task identification"
+    available_tools: ["get_time", "calculator"]
+    routes:
+      - target: "end"
+        condition: "Task is complete"
+  - step_id: "end"
+    description: "Final response and goodbye"
+
+start_step_id: "start"
+max_errors: 3
+max_iter: 10
+
+# LLM configuration
+llm:
+  provider: "openai"
+  model: "gpt-4o-mini"
+  temperature: 0.7
+  max_tokens: 1000
+  api_key: "$OPENAI_API_KEY"
+
+# Server configuration with full security
+server:
+  port: 8000
+  host: "0.0.0.0"
+  workers: 4
+
+  security:
+    # Authentication
+    enable_auth: true
+    auth_type: "jwt"
+    jwt_secret_key: "$JWT_SECRET_KEY"
+
+    # Rate limiting
+    enable_rate_limiting: true
+    rate_limit: "100/minute"
+
+    # CSRF protection
+    enable_csrf_protection: true
+    csrf_secret_key: "$CSRF_SECRET_KEY"
+
+    # CORS configuration
+    allowed_origins:
+      - "https://your-frontend.com"
+      - "https://admin.your-domain.com"
+
+  # Production session store
+  session:
+    store_type: "production"
+    default_ttl: 3600
+    cache_ttl: 1800
+    database_url: "$DATABASE_URL"
+    redis_url: "$REDIS_URL"
+    kafka_brokers: "$KAFKA_BROKERS"
+    events_enabled: true
+
+# Tools configuration
+tools:
+  files:
+    - "custom_tools.py"
+  ext:
+    - tag: "@pkg/math.sqrt"
+      name: "sqrt"
+    - tag: "@langchain/calculator"
+      name: "calculator"
+
+# Logging configuration
+logging:
+  enable: true
+  handlers:
+    - type: "stderr"
+      level: "INFO"
+      format: "{time:YYYY-MM-DD HH:mm:ss} | {level} | {message}"
+    - type: "file"
+      level: "DEBUG"
+      format: "{time:YYYY-MM-DD HH:mm:ss} | {level} | {file}:{line} | {message}"
+```
 
 ## Configuration Examples
 
 More configuration examples are available in the cookbook:
 
 <CardGroup cols={2}>
+  <Card
+    title="Secure Agent Example"
+    icon="shield-check"
+    href="/examples/secure-agent.yaml"
+  >
+    Production-ready secure configuration
+  </Card>
   <Card
     title="Barista Agent"
     icon="coffee"
