--- a/docs/dev-deploy/security.mdx
+++ b/docs/dev-deploy/security.mdx
@@ -54,7 +54,9 @@ server:
     auth_type: jwt
     jwt_secret_key: "$JWT_SECRET_KEY"
     enable_rate_limiting: true
-    rate_limit: "100/minute"
+    redis_url: "$REDIS_URL"
+    rate_limit_times: 100
+    rate_limit_seconds: 60
     enable_csrf_protection: true
     csrf_secret_key: "$CSRF_SECRET_KEY"
 ```
@@ -66,7 +68,9 @@ server:
     auth_type: api_key
     api_key_url: "$API_KEY_VALIDATION_URL"
     enable_rate_limiting: true
-    rate_limit: "100/minute"
+    redis_url: "$REDIS_URL"
+    rate_limit_times: 100
+    rate_limit_seconds: 60
     enable_csrf_protection: true
     csrf_secret_key: "$CSRF_SECRET_KEY"
 ```
@@ -89,6 +93,7 @@ Essential security environment variables:
 | `JWT_SECRET_KEY` | Secret key for JWT token signing |
 | `CSRF_SECRET_KEY` | Secret key for CSRF protection |
 | `API_KEY_VALIDATION_URL` | Endpoint URL for API key validation |
+| `REDIS_URL` | Redis connection URL for rate limiting |
 
 ## Best Practices
 
